# rig-tools

./: Cargo.toml  LICENSE  README.md
src/: bash.rs  error.rs  lib.rs
src/fs/: edit.rs  glob.rs  grep.rs  list_directory.rs  mod.rs  read.rs
tests/: integration_tests.rs
